--- a/example/package.json
+++ b/example/package.json
@@ -9,8 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "typescript": "4.9.4",
+    "vite": "4.0.3"
   },
   "prettier": {}
 }
