--- a/package.json
+++ b/package.json
@@ -2,10 +2,26 @@
   "name": "scroll-into-area",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "directories": {},
+  "type": "module",
+  "source": "src/index.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs",
+      "default": "./dist/index.mjs"
+    },
+    "./scroll-into-area": {
+      "require": "./dist/scroll-into-area.js",
+      "import": "./dist/scroll-into-area.mjs",
+      "default": "./dist/scroll-into-area.mjs"
+    }
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rm -r dist/*",
+    "build": "tsc && pnpm run clean && rollup -c"
   },
   "repository": {
     "type": "git",
@@ -19,5 +35,13 @@
   "homepage": "https://github.com/faustienf/scroll-into-area#readme",
   "dependencies": {
     "easing-scroll": "^1.0.0"
+  },
+  "devDependencies": {
+    "@rollup/plugin-node-resolve": "15.0.1",
+    "esbuild": "0.16.12",
+    "rollup": "3.9.1",
+    "rollup-plugin-esbuild": "5.0.0",
+    "rollup-plugin-typescript2": "0.34.1",
+    "typescript": "4.9.4"
   }
 }
