--- a/example/package.json
+++ b/example/package.json
@@ -10,8 +10,17 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10",
+    "@vitejs/plugin-react-swc": "3.0.1",
     "typescript": "4.9.4",
     "vite": "4.0.3"
   },
-  "prettier": {}
+  "prettier": {},
+  "dependencies": {
+    "@codesandbox/sandpack-react": "1.18.4",
+    "@codesandbox/sandpack-themes": "1.17.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  }
 }
