--- a/example/package.json
+++ b/example/package.json
@@ -21,6 +21,7 @@
     "@codesandbox/sandpack-react": "1.18.4",
     "@codesandbox/sandpack-themes": "1.17.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "scroll-into-area": "^1.0.0"
   }
 }
